@@ -1,3 +1,6 @@
+2014-04-10
+ * rep_n and rep_separation queue entries parameters
+
 2014-03-12
  * added skip command
 
